<resources>
    <string name="app_name">NurseTrackingDashboardMQTT</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_dashboard">Dashboard</string>

    <string name="title_login">Login Form</string>
    <string name="edittext_email">Email</string>
    <string name="edittext_password">Password</string>
    <string name="edittext_confirmpassword">Confirm Password</string>
    <string name="btn_create">Create</string>
    <string name="btn_signin">Sign in</string>
    <string name="btn_back">Back</string>





</resources>