<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_bg_pink"
    tools:context=".ui.slideshow.SlideshowFragment">

    <ImageView
        android:adjustViewBounds="true"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="22dp"
        android:src="@drawable/ic_bed_active"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="22dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="40dp">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_back"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/btn_back"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:textColor="#fff"
            android:id="@+id/text_slideshow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textSize="36sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_email"
            android:textColor="@color/color_content_3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_password"
            android:textColor="@color/color_content_3"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_confirmpassword"
            android:textColor="@color/color_content_3"
            android:textSize="16sp" />

        <Button
            android:background="@drawable/selector_btn_back"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/btn_create"
            android:textColor="@color/color_content_1"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:textSize="16sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Acoount ?"
                android:textSize="16sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_create"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
